zr_vm_rust_binding/include/zr_vm_rust_binding.h

typedef enum EZrRustBindingStatus {
    ZR_RUST_BINDING_STATUS_OK = 0,
    ZR_RUST_BINDING_STATUS_INVALID_ARGUMENT = 1,
    ZR_RUST_BINDING_STATUS_IO_ERROR = 2,
    ZR_RUST_BINDING_STATUS_NOT_FOUND = 3,
    ZR_RUST_BINDING_STATUS_ALREADY_EXISTS = 4,
    ZR_RUST_BINDING_STATUS_BUFFER_TOO_SMALL = 5,
    ZR_RUST_BINDING_STATUS_COMPILE_ERROR = 6,
    ZR_RUST_BINDING_STATUS_RUNTIME_ERROR = 7,
    ZR_RUST_BINDING_STATUS_UNSUPPORTED = 8,
    ZR_RUST_BINDING_STATUS_INTERNAL_ERROR = 9
} ZrRustBindingStatus;
typedef enum EZrRustBindingNativeConstantKind {
    ZR_RUST_BINDING_NATIVE_CONSTANT_KIND_NULL = 0,
    ZR_RUST_BINDING_NATIVE_CONSTANT_KIND_BOOL = 1,
    ZR_RUST_BINDING_NATIVE_CONSTANT_KIND_INT = 2,
    ZR_RUST_BINDING_NATIVE_CONSTANT_KIND_FLOAT = 3,
    ZR_RUST_BINDING_NATIVE_CONSTANT_KIND_STRING = 4,
    ZR_RUST_BINDING_NATIVE_CONSTANT_KIND_ARRAY = 5
} ZrRustBindingNativeConstantKind;
typedef enum EZrRustBindingPrototypeType {
    ZR_RUST_BINDING_PROTOTYPE_TYPE_INVALID = 0,
    ZR_RUST_BINDING_PROTOTYPE_TYPE_MODULE = 1,
    ZR_RUST_BINDING_PROTOTYPE_TYPE_CLASS = 2,
    ZR_RUST_BINDING_PROTOTYPE_TYPE_INTERFACE = 3,
    ZR_RUST_BINDING_PROTOTYPE_TYPE_STRUCT = 4,
    ZR_RUST_BINDING_PROTOTYPE_TYPE_ENUM = 5,
    ZR_RUST_BINDING_PROTOTYPE_TYPE_NATIVE = 6
} ZrRustBindingPrototypeType;
typedef enum EZrRustBindingMetaMethodType {
    ZR_RUST_BINDING_META_METHOD_CONSTRUCTOR = 0,
    ZR_RUST_BINDING_META_METHOD_DESTRUCTOR = 1,
    ZR_RUST_BINDING_META_METHOD_ADD = 2,
    ZR_RUST_BINDING_META_METHOD_SUB = 3,
    ZR_RUST_BINDING_META_METHOD_MUL = 4,
    ZR_RUST_BINDING_META_METHOD_DIV = 5,
    ZR_RUST_BINDING_META_METHOD_MOD = 6,
    ZR_RUST_BINDING_META_METHOD_POW = 7,
    ZR_RUST_BINDING_META_METHOD_NEG = 8,
    ZR_RUST_BINDING_META_METHOD_COMPARE = 9,
    ZR_RUST_BINDING_META_METHOD_TO_BOOL = 10,
    ZR_RUST_BINDING_META_METHOD_TO_STRING = 11,
    ZR_RUST_BINDING_META_METHOD_TO_INT = 12,
    ZR_RUST_BINDING_META_METHOD_TO_UINT = 13,
    ZR_RUST_BINDING_META_METHOD_TO_FLOAT = 14,
    ZR_RUST_BINDING_META_METHOD_CALL = 15,
    ZR_RUST_BINDING_META_METHOD_GETTER = 16,
    ZR_RUST_BINDING_META_METHOD_SETTER = 17,
    ZR_RUST_BINDING_META_METHOD_SHIFT_LEFT = 18,
    ZR_RUST_BINDING_META_METHOD_SHIFT_RIGHT = 19,
    ZR_RUST_BINDING_META_METHOD_BIT_AND = 20,
    ZR_RUST_BINDING_META_METHOD_BIT_OR = 21,
    ZR_RUST_BINDING_META_METHOD_BIT_XOR = 22,
    ZR_RUST_BINDING_META_METHOD_BIT_NOT = 23,
    ZR_RUST_BINDING_META_METHOD_GET_ITEM = 24,
    ZR_RUST_BINDING_META_METHOD_SET_ITEM = 25,
    ZR_RUST_BINDING_META_METHOD_CLOSE = 26,
    ZR_RUST_BINDING_META_METHOD_DECORATE = 27
} ZrRustBindingMetaMethodType;
typedef struct ZrRustBindingNativeTypeHintDescriptor {
    const TZrChar *symbolName;
    const TZrChar *symbolKind;
    const TZrChar *signature;
    const TZrChar *documentation;
} ZrRustBindingNativeTypeHintDescriptor;
typedef struct ZrRustBindingNativeFieldDescriptor {
    const TZrChar *name;
    const TZrChar *typeName;
    const TZrChar *documentation;
    TZrUInt32 contractRole;
} ZrRustBindingNativeFieldDescriptor;
typedef struct ZrRustBindingNativeParameterDescriptor {
    const TZrChar *name;
    const TZrChar *typeName;
    const TZrChar *documentation;
} ZrRustBindingNativeParameterDescriptor;
typedef struct ZrRustBindingNativeGenericParameterDescriptor {
    const TZrChar *name;
    const TZrChar *documentation;
    const TZrChar *const *constraintTypeNames;
    TZrSize constraintTypeCount;
} ZrRustBindingNativeGenericParameterDescriptor;
typedef struct ZrRustBindingNativeEnumMemberDescriptor {
    const TZrChar *name;
    ZrRustBindingNativeConstantKind kind;
    TZrInt64 intValue;
    TZrFloat64 floatValue;
    const TZrChar *stringValue;
    TZrBool boolValue;
    const TZrChar *documentation;
} ZrRustBindingNativeEnumMemberDescriptor;
typedef struct ZrRustBindingNativeConstantDescriptor {
    const TZrChar *name;
    ZrRustBindingNativeConstantKind kind;
    TZrInt64 intValue;
    TZrFloat64 floatValue;
    const TZrChar *stringValue;
    TZrBool boolValue;
    const TZrChar *documentation;
    const TZrChar *typeName;
} ZrRustBindingNativeConstantDescriptor;
typedef struct ZrRustBindingNativeModuleLinkDescriptor {
    const TZrChar *name;
    const TZrChar *moduleName;
    const TZrChar *documentation;
} ZrRustBindingNativeModuleLinkDescriptor;
typedef struct ZrRustBindingRuntime ZrRustBindingRuntime;
typedef struct ZrRustBindingNativeCallContext ZrRustBindingNativeCallContext;
typedef struct ZrRustBindingNativeModuleBuilder ZrRustBindingNativeModuleBuilder;
typedef struct ZrRustBindingNativeModule ZrRustBindingNativeModule;
typedef struct ZrRustBindingRuntimeNativeModuleRegistration ZrRustBindingRuntimeNativeModuleRegistration;
typedef struct ZrRustBindingValue ZrRustBindingValue;
typedef ZrRustBindingStatus (*FZrRustBindingNativeCallback)(ZrRustBindingNativeCallContext *context,
                                                            TZrPtr userData,
                                                            ZrRustBindingValue **outResult);
typedef void (*FZrRustBindingDestroyCallback)(TZrPtr userData);
typedef struct ZrRustBindingNativeFunctionDescriptor {
    const TZrChar *name;
    TZrUInt16 minArgumentCount;
    TZrUInt16 maxArgumentCount;
    FZrRustBindingNativeCallback callback;
    TZrPtr userData;
    FZrRustBindingDestroyCallback destroyUserData;
    const TZrChar *returnTypeName;
    const TZrChar *documentation;
    const ZrRustBindingNativeParameterDescriptor *parameters;
    TZrSize parameterCount;
    const ZrRustBindingNativeGenericParameterDescriptor *genericParameters;
    TZrSize genericParameterCount;
    TZrUInt32 contractRole;
} ZrRustBindingNativeFunctionDescriptor;
typedef struct ZrRustBindingNativeMethodDescriptor {
    const TZrChar *name;
    TZrUInt16 minArgumentCount;
    TZrUInt16 maxArgumentCount;
    FZrRustBindingNativeCallback callback;
    TZrPtr userData;
    FZrRustBindingDestroyCallback destroyUserData;
    const TZrChar *returnTypeName;
    const TZrChar *documentation;
    TZrBool isStatic;
    const ZrRustBindingNativeParameterDescriptor *parameters;
    TZrSize parameterCount;
    TZrUInt32 contractRole;
    const ZrRustBindingNativeGenericParameterDescriptor *genericParameters;
    TZrSize genericParameterCount;
} ZrRustBindingNativeMethodDescriptor;
typedef struct ZrRustBindingNativeMetaMethodDescriptor {
    ZrRustBindingMetaMethodType metaType;
    TZrUInt16 minArgumentCount;
    TZrUInt16 maxArgumentCount;
    FZrRustBindingNativeCallback callback;
    TZrPtr userData;
    FZrRustBindingDestroyCallback destroyUserData;
    const TZrChar *returnTypeName;
    const TZrChar *documentation;
    const ZrRustBindingNativeParameterDescriptor *parameters;
    TZrSize parameterCount;
    const ZrRustBindingNativeGenericParameterDescriptor *genericParameters;
    TZrSize genericParameterCount;
} ZrRustBindingNativeMetaMethodDescriptor;
typedef struct ZrRustBindingNativeTypeDescriptor {
    const TZrChar *name;
    ZrRustBindingPrototypeType prototypeType;
    const ZrRustBindingNativeFieldDescriptor *fields;
    TZrSize fieldCount;
    const ZrRustBindingNativeMethodDescriptor *methods;
    TZrSize methodCount;
    const ZrRustBindingNativeMetaMethodDescriptor *metaMethods;
    TZrSize metaMethodCount;
    const TZrChar *documentation;
    const TZrChar *extendsTypeName;
    const TZrChar *const *implementsTypeNames;
    TZrSize implementsTypeCount;
    const ZrRustBindingNativeEnumMemberDescriptor *enumMembers;
    TZrSize enumMemberCount;
    const TZrChar *enumValueTypeName;
    TZrBool allowValueConstruction;
    TZrBool allowBoxedConstruction;
    const TZrChar *constructorSignature;
    const ZrRustBindingNativeGenericParameterDescriptor *genericParameters;
    TZrSize genericParameterCount;
    TZrUInt64 protocolMask;
    const TZrChar *ffiLoweringKind;
    const TZrChar *ffiViewTypeName;
    const TZrChar *ffiUnderlyingTypeName;
    const TZrChar *ffiOwnerMode;
    const TZrChar *ffiReleaseHook;
} ZrRustBindingNativeTypeDescriptor;
ZR_RUST_BINDING_API ZrRustBindingStatus ZrRustBinding_NativeModuleBuilder_New(
        const TZrChar *moduleName,
        ZrRustBindingNativeModuleBuilder **outBuilder);
ZR_RUST_BINDING_API ZrRustBindingStatus ZrRustBinding_NativeModuleBuilder_SetDocumentation(
        ZrRustBindingNativeModuleBuilder *builder,
        const TZrChar *documentation);
ZR_RUST_BINDING_API ZrRustBindingStatus ZrRustBinding_NativeModuleBuilder_SetModuleVersion(
        ZrRustBindingNativeModuleBuilder *builder,
        const TZrChar *moduleVersion);
ZR_RUST_BINDING_API ZrRustBindingStatus ZrRustBinding_NativeModuleBuilder_SetTypeHintsJson(
        ZrRustBindingNativeModuleBuilder *builder,
        const TZrChar *typeHintsJson);
ZR_RUST_BINDING_API ZrRustBindingStatus ZrRustBinding_NativeModuleBuilder_SetRuntimeRequirements(
        ZrRustBindingNativeModuleBuilder *builder,
        TZrUInt32 minRuntimeAbi,
        TZrUInt64 requiredCapabilities);
ZR_RUST_BINDING_API ZrRustBindingStatus ZrRustBinding_NativeModuleBuilder_AddTypeHint(
        ZrRustBindingNativeModuleBuilder *builder,
        const ZrRustBindingNativeTypeHintDescriptor *descriptor);
ZR_RUST_BINDING_API ZrRustBindingStatus ZrRustBinding_NativeModuleBuilder_AddModuleLink(
        ZrRustBindingNativeModuleBuilder *builder,
        const ZrRustBindingNativeModuleLinkDescriptor *descriptor);
ZR_RUST_BINDING_API ZrRustBindingStatus ZrRustBinding_NativeModuleBuilder_AddConstant(
        ZrRustBindingNativeModuleBuilder *builder,
        const ZrRustBindingNativeConstantDescriptor *descriptor);
ZR_RUST_BINDING_API ZrRustBindingStatus ZrRustBinding_NativeModuleBuilder_AddFunction(
        ZrRustBindingNativeModuleBuilder *builder,
        const ZrRustBindingNativeFunctionDescriptor *descriptor);
ZR_RUST_BINDING_API ZrRustBindingStatus ZrRustBinding_NativeModuleBuilder_AddType(
        ZrRustBindingNativeModuleBuilder *builder,
        const ZrRustBindingNativeTypeDescriptor *descriptor);
ZR_RUST_BINDING_API ZrRustBindingStatus ZrRustBinding_NativeModuleBuilder_Build(
        ZrRustBindingNativeModuleBuilder *builder,
        ZrRustBindingNativeModule **outModule);
ZR_RUST_BINDING_API ZrRustBindingStatus ZrRustBinding_NativeModuleBuilder_Free(
        ZrRustBindingNativeModuleBuilder *builder);
ZR_RUST_BINDING_API ZrRustBindingStatus ZrRustBinding_NativeModule_Free(
        ZrRustBindingNativeModule *module);
ZR_RUST_BINDING_API ZrRustBindingStatus ZrRustBinding_Runtime_RegisterNativeModule(
        ZrRustBindingRuntime *runtime,
        ZrRustBindingNativeModule *module,
        ZrRustBindingRuntimeNativeModuleRegistration **outRegistration);
ZR_RUST_BINDING_API ZrRustBindingStatus ZrRustBinding_RuntimeNativeModuleRegistration_Free(
        ZrRustBindingRuntimeNativeModuleRegistration *registration);